--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="home">خانه</string>
     <string name="fav">علاقه</string>
     <string name="profile">پروفایل</string>
+    <string name="start">شروع</string>
 </resources>
