--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="fav">علاقه</string>
     <string name="profile">پروفایل</string>
     <string name="start">شروع</string>
+    <string name="next">بعدی</string>
+     <string name="previous">قبلی</string>
 </resources>
